예측 히스토리 대쉬보드 구현

--- a/public/changePwLink.html
+++ b/public/changePwLink.html
@@ -20,23 +20,25 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">비밀번호 변경</h3></div>
                                     <div class="card-body">
-                                        <form>
+                                        <form id="resetPwForm">
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputPassword" type="password" placeholder="Create a password" />
+                                                        <input class="form-control" id="inputPassword" type="password" placeholder="Create a password" required />
                                                         <label for="inputPassword">비밀번호</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password" />
+                                                        <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password" required />
                                                         <label for="inputPasswordConfirm">비밀번호 재입력</label>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="mt-4 mb-0">
-                                                <div class="d-grid"><a class="btn btn-primary btn-block" href="/login.html">비밀번호 변경</a></div>
+                                                <div class="d-grid">
+                                                    <button type="submit" class="btn btn-primary btn-block">비밀번호 변경</button>
+                                                </div>
                                             </div>
                                         </form>
                                     </div>
@@ -63,5 +65,58 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="/js/scripts.js"></script>
+        <script>
+            document.getElementById('resetPwForm').addEventListener('submit', async function (e) {
+                e.preventDefault();
+
+                const password = document.getElementById('inputPassword').value.trim();
+                const confirmPassword = document.getElementById('inputPasswordConfirm').value.trim();
+
+                if (!password || !confirmPassword) {
+                    alert('비밀번호를 모두 입력해주세요.');
+                    return;
+                }
+
+                if (password !== confirmPassword) {
+                    alert('비밀번호가 서로 일치하지 않습니다.');
+                    return;
+                }
+
+                // URL에서 token 쿼리 파라미터 추출
+                const urlParams = new URLSearchParams(window.location.search);
+                const token = urlParams.get('token');
+
+                if (!token) {
+                    alert('유효하지 않은 비밀번호 변경 링크입니다.');
+                    return;
+                }
+
+                try {
+                    const response = await fetch(`/api/changePwLink?token=${encodeURIComponent(token)}`, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ password })
+                    });
+
+                    if (!response.ok) {
+                        throw new Error('서버 오류: ' + response.status);
+                    }
+
+                    const data = await response.json();
+
+                    if (data.success) {
+                        alert('비밀번호가 성공적으로 변경되었습니다.');
+                        window.location.href = '/login.html';
+                    } else {
+                        alert(data.message || '비밀번호 변경에 실패했습니다.');
+                    }
+                } catch (error) {
+                    console.error('비밀번호 변경 오류:', error);
+                    alert('오류가 발생했습니다. 다시 시도해주세요.');
+                }
+            });
+        </script>
     </body>
 </html>
