--- a/public/changePwLink.html
+++ b/public/changePwLink.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>비밀번호 변경</title>
-        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="/src/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
@@ -64,7 +64,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="/js/scripts.js"></script>
+        <script src="/src/js/scripts.js"></script>
         <script>
             document.getElementById('resetPwForm').addEventListener('submit', async function (e) {
                 e.preventDefault();
@@ -92,21 +92,21 @@
                 }
 
                 try {
-                    const response = await fetch(`/api/changePwLink?token=${encodeURIComponent(token)}`, {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({ password })
-                    });
+                    const response = await fetch(`http://localhost:8080/api/changePwLink?token=${encodeURIComponent(token)}`, {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ newPw: password })
+});
 
                     if (!response.ok) {
-                        throw new Error('서버 오류: ' + response.status);
+                        // 서버에서 에러 메시지 받을 수 있으면 처리
+                        const errorData = await response.json().catch(() => ({}));
+                        throw new Error(errorData.message || `서버 오류: ${response.status}`);
                     }
 
                     const data = await response.json();
 
-                    if (data.success) {
+                    if (data.status === 'success') {
                         alert('비밀번호가 성공적으로 변경되었습니다.');
                         window.location.href = '/login.html';
                     } else {
@@ -114,7 +114,7 @@
                     }
                 } catch (error) {
                     console.error('비밀번호 변경 오류:', error);
-                    alert('오류가 발생했습니다. 다시 시도해주세요.');
+                    alert(error.message || '오류가 발생했습니다. 다시 시도해주세요.');
                 }
             });
         </script>
