--- a/public/findId.html
+++ b/public/findId.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>아이디찾기</title>
-        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="/src/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="/js/scripts.js"></script>
+        <script src="/src/js/scripts.js"></script>
         <script>
             document.getElementById('findIdForm').addEventListener('submit', async function (e) {
                 e.preventDefault();
@@ -67,7 +67,7 @@
                 }
 
                 try {
-                    const response = await fetch('/api/findId', {
+                    const response = await fetch('http://localhost:8080/api/findId', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
