--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>로그인</title>
-        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="/src/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
@@ -22,11 +22,11 @@
                                     <div class="card-body">
                                         <form id="loginForm">
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="text" placeholder="example" />
+                                                <input class="form-control" id="inputEmail" name="userid" type="text" placeholder="example" />
                                                 <label for="inputEmail">아이디</label>
                                             </div>
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
+                                                <input class="form-control" id="inputPassword" name="pw" type="password" placeholder="Password" />
                                                 <label for="inputPassword">비밀번호</label>
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
@@ -58,27 +58,25 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="/js/scripts.js"></script>
+        <script src="/src/js/scripts.js"></script>
         <script>
             document.getElementById('loginForm').addEventListener('submit', async function (e) {
                 e.preventDefault();
 
-                const username = document.getElementById('inputEmail').value.trim();
-                const password = document.getElementById('inputPassword').value.trim();
+                const userid = document.getElementById('inputEmail').value.trim();
+const pw = document.getElementById('inputPassword').value.trim();
 
-                if (!username || !password) {
+                if (!userid || !pw) {
                     alert('아이디와 비밀번호를 입력해주세요.');
                     return;
                 }
 
                 try {
-                    const response = await fetch('/api/login', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({ username, password })
-                    });
+                    const response = await fetch('http://localhost:8080/api/login', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ userid, pw })  // 키 이름 맞춤
+});
 
                     if (!response.ok) {
                         throw new Error('서버 오류: ' + response.status);
@@ -86,11 +84,11 @@
 
                     const data = await response.json();
 
-                    if (data.success) {
-                        window.location.href = '/index.html';
-                    } else {
-                        alert(data.message || '로그인 실패: 아이디 또는 비밀번호가 올바르지 않습니다.');
-                    }
+                    if (data.status === 'success') {
+    window.location.href = '/index.html';
+} else {
+    alert(data.message || '로그인 실패: 아이디 또는 비밀번호가 올바르지 않습니다.');
+}
                 } catch (error) {
                     console.error('로그인 오류:', error);
                     alert('로그인 중 오류가 발생했습니다. 다시 시도해주세요.');
